--- a/RedeSocial/pom.xml
+++ b/RedeSocial/pom.xml
@@ -9,5 +9,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
+    <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <version>3.1</version>
+  <type>maven-plugin</type>
     </properties>
+    
+
 </project>
