--- a/RedeSocial/pom.xml
+++ b/RedeSocial/pom.xml
@@ -14,6 +14,14 @@
   <version>3.1</version>
   <type>maven-plugin</type>
     </properties>
-    
+    <dependencies>
+        <dependency>
+            <groupId>com.mycompany</groupId>
+            <artifactId>Utilitarios</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
+    <name>RedeSocial</name>
 
 </project>
